--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,5 @@
 @import "./utils/vars";
 @import"./utils/mixin";
-@import"./components/sec-1.scss";
+@import"./utils/placeholder";
+@import"./components/sec-1";
+@import"./components/footer";
