--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,20 @@
 .container {
   width: 315px;
   margin: 0 auto;
-  padding: 41px 0 47px;
 }
 
 @media screen and (min-width: 1200px) {
   .container {
+    width: 1122px;
+  }
+}
+@media screen and (min-width: 1918px) {
+  .container {
     width: 1280px;
   }
+}
+.activities {
+  padding: 41px 0 47px;
 }
 .activities:first-child {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(1, 10, 32, 0.9)), to(rgba(1, 10, 32, 0.9))), url(/img/mountains@2x.png);
@@ -74,6 +81,8 @@
         -ms-flex-align: center;
             align-items: center;
   }
+}
+@media screen and (min-width: 1918px) {
   .activities-el img {
     width: 630px;
     height: 460px;
@@ -123,23 +132,66 @@
   }
 }
 .footer-div {
+  padding-top: 148px;
+  padding-bottom: 85px;
   background-color: #010A20;
 }
 
-.mobile-container {
-  width: 206px;
+.foot-container {
+  width: 315px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 36px;
 }
 
+@media screen and (min-width: 1200px) {
+  .footer-div {
+    padding-top: 40px;
+    padding-bottom: 30px;
+  }
+  .foot-container {
+    width: auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 36px;
+  }
+  .foot-el {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: auto;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 1184px;
+    margin-right: 50px;
+  }
+}
 .logo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .logo {
+    margin: 0 70px 0 124px;
+  }
+}
 .logo-text {
   text-decoration: none;
   font-family: "Roboto";
@@ -148,6 +200,81 @@
   color: #FFFFFF;
 }
 
+.logo-decor-text {
+  color: #DD2242;
+}
+
+.logo-svg {
+  fill: #FFFFFF;
+}
+
 .nav {
   list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 36px;
+  padding: 0;
+}
+.nav_el {
+  font-family: "DM Sans";
+  font-weight: 700;
+  font-size: 23px;
+  color: #FFFFFF;
+  text-align: center;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .nav {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 36px;
+  }
+  .nav_el {
+    font-family: "DM Sans";
+    font-weight: 700;
+    font-size: 18px;
+    text-align: center;
+  }
+}
+.networks {
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 60px;
+  padding: 0;
+}
+
+.networks_svg {
+  fill: #FFFFFF;
+}
+
+.sign {
+  font-family: "DM Sans";
+  font-weight: 700;
+  font-size: 23px;
+  color: #FFFFFF;
+  margin: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .sign {
+    font-family: "DM Sans";
+    font-weight: 700;
+    font-size: 18px;
+  }
 }/*# sourceMappingURL=style.css.map */
