--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,13 +1,42 @@
 .footer-div{
-       background-color: $dark-bg; 
+    padding-top: 148px;
+    padding-bottom: 85px;
+    background-color: $dark-bg; 
 }
-.mobile-container{
-    width: 206px;
+.foot-container{
+    width: 315px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 36px;
+}
+@media screen and (min-width:1200px){
+    .footer-div{
+        padding-top:40px;
+        padding-bottom: 30px;}
+    .foot-container{
+        width: auto;
+        flex-direction:row;
+        align-items: center;
+        gap: 36px;
+    }
+    .foot-el{
+        display: flex;
+        width: auto;
+        justify-content: space-between;
+        width: 1184px;
+        margin-right: 50px;
+    }
 }
 .logo{
     display: flex;
-    align-items: center;
+    // align-items: center;
+}
+@media screen and (min-width:1200px){
+    .logo{
+        margin: 0 70px 0 124px;
+    }
 }
 .logo-text{
     text-decoration: none;
@@ -16,6 +45,53 @@
     font-weight: 900;
     color: $white-col;
 }
+.logo-decor-text{
+    color: $btn-bg;
+}
+.logo-svg{
+    fill: $white-col;
+}
 .nav{
     list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 36px; 
+    padding: 0;
+&_el{
+    @include fonts($size:23px);
+    color: $white-col;
+    text-align: center;
+    text-decoration: none;
+}
+}
+@media screen and (min-width:1200px){
+    .nav{
+        flex-direction: row;
+        align-items: center;
+        gap: 36px; 
+    &_el{
+        @include fonts($size:18px);
+        text-align: center;
+    }
+    }
+}
+.networks{
+    list-style-type:none;
+    display: flex;
+    gap: 60px;
+    padding: 0;
+}
+.networks_svg{
+    fill: $white-col;
+}
+.sign{
+    @include fonts($size:23px);
+    color: $white-col;
+    margin: 0;
+}
+@media screen and (min-width:1200px){
+    .sign{
+        @include fonts($size:18px);
+    }
 }
