--- a/sass/components/_sec-1.scss
+++ b/sass/components/_sec-1.scss
@@ -5,14 +5,19 @@
 .container{
     width: 315px;
     margin: 0 auto;
-    padding: 41px 0 47px;
 }
 @media screen and (min-width:1200px){
+    .container{
+        width: 1122px;
+    }
+}
+@media screen and (min-width:1918px){
     .container{
         width: 1280px;
     }
 }
 .activities{
+    padding: 41px 0 47px;
     // line-height: 0;
 &:first-child{
     background-image:linear-gradient(
@@ -68,7 +73,6 @@
 }
 }
 .activities-el{
-
 &:first-child{
     margin-bottom: 56px;
 }}
@@ -77,6 +81,10 @@
         display: flex;
         gap: 130px;
         align-items: center;
+    }
+}
+@media screen and (min-width:1918px){
+    .activities-el{
 & img{
     width: 630px;
     height: 460px;
