--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
     width: 1122px;
   }
 }
-@media screen and (min-width: 1918px) {
+@media screen and (min-width: 1920px) {
   .container {
     width: 1280px;
   }
@@ -31,15 +31,15 @@
   padding: 41px 0 47px;
 }
 .activities:first-child {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(1, 10, 32, 0.9)), to(rgba(1, 10, 32, 0.9))), url(/img/mountains@2x.png);
-  background-image: linear-gradient(rgba(1, 10, 32, 0.9), rgba(1, 10, 32, 0.9)), url(/img/mountains@2x.png);
+  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(1, 10, 32, 0.9))), url(/img/mountains@2x.png);
+  background-image: linear-gradient(to top rgba(1, 10, 32, 0.9), rgba(1, 10, 32, 0.9)), url(/img/mountains@2x.png);
   background-repeat: no-repeat;
-  background-size: 519px cover;
+  background-size: 520px cover;
   background-position: top center;
 }
 .activities:nth-child(2) {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(1, 10, 32, 0.9)), to(rgba(1, 10, 32, 0.9))), url(/img/beach@2x.png);
-  background-image: linear-gradient(rgba(1, 10, 32, 0.9), rgba(1, 10, 32, 0.9)), url(/img/beach@2x.png);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(1, 10, 32, 0.9))), url(/img/beach@2x.png);
+  background-image: linear-gradient(to bottom rgba(1, 10, 32, 0.9), rgba(1, 10, 32, 0.9)), url(/img/beach@2x.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 30%;
@@ -82,10 +82,12 @@
             align-items: center;
   }
 }
-@media screen and (min-width: 1918px) {
+@media screen and (min-width: 1920px) {
   .activities-el img {
     width: 630px;
     height: 460px;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 .activ-text_h2 {
@@ -135,8 +137,32 @@
   padding-top: 148px;
   padding-bottom: 85px;
   background-color: #010A20;
+  position: relative;
 }
 
+.mobile-btn {
+  position: absolute;
+  top: -7%;
+  left: 40%;
+  width: 104px;
+  height: 104px;
+  background-color: #DD2242;
+  border-radius: 50%;
+}
+.mobile-btn_svg {
+  fill: #FFFFFF;
+  margin: 40px 34px;
+}
+
+@media screen and (min-width: 1200px) {
+  .mobile-btn {
+    top: -50%;
+    left: 92%;
+  }
+  .mobile-btn_svg {
+    margin: 40px 34px;
+  }
+}
 .foot-container {
   width: 315px;
   margin: 0 auto;
@@ -257,8 +283,17 @@
   display: flex;
   gap: 60px;
   padding: 0;
+  margin-top: 36px;
 }
 
+@media screen and (min-width: 1200px) {
+  .networks {
+    margin: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 .networks_svg {
   fill: #FFFFFF;
 }
