--- a/sass/components/_sec-1.scss
+++ b/sass/components/_sec-1.scss
@@ -11,29 +11,28 @@
         width: 1122px;
     }
 }
-@media screen and (min-width:1918px){
+@media screen and (min-width:1920px){
     .container{
         width: 1280px;
     }
 }
 .activities{
     padding: 41px 0 47px;
-    // line-height: 0;
 &:first-child{
     background-image:linear-gradient(
-        // to top
+        to top
         rgba(1, 10, 32, 90%),
         rgba(1, 10, 32, 90%)),
     url(/img/mountains@2x.png);
     background-repeat: no-repeat;
-    background-size: 519px cover ;
+    background-size: 520px cover ;
     background-position:top center;
     
 }
 &:nth-child(2){
     background-image:
     linear-gradient(
-        // to bottom
+        to bottom
         rgba(1, 10, 32, 90%),
         rgba(1, 10, 32, 90%)),
     url(/img/beach@2x.png);
@@ -51,7 +50,6 @@
 .activities{
     &:first-child{
         background-image:linear-gradient(
-            // to top
             rgba(1, 10, 32, 85%),
             rgba(1, 10, 32, 100%)),
         url(/img/mountains@3x.png);
@@ -62,7 +60,6 @@
     &:nth-child(2){
         background-image:
         linear-gradient(
-            // to bottom
             rgba(1, 10, 32, 100%),
             rgba(1, 10, 32, 85%)),
         url(/img/beach@3x.png);
@@ -83,11 +80,12 @@
         align-items: center;
     }
 }
-@media screen and (min-width:1918px){
+@media screen and (min-width:1920px){
     .activities-el{
 & img{
     width: 630px;
     height: 460px;
+    object-fit: cover
 }
     }
 }
@@ -130,4 +128,3 @@
     }
 
 }
-
