--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,1 +1,1 @@
-@import "./vars", "./utilites/mixin", "./components/main";
+@import "./vars", "./utilites/mixin", "./components/main", "./components/hills", "./components/video";
