--- a/scss/components/_general.scss
+++ b/scss/components/_general.scss
@@ -6,7 +6,6 @@ ul{
     margin: 0;
 }
 .container{
-    width: 313px;
     margin: 0 auto;
-    padding-inline: 30px;
+    padding-inline: 31px !important;
 }
