--- a/scss/components/_firstHalf.scss
+++ b/scss/components/_firstHalf.scss
@@ -1,12 +1,36 @@
 .main-background{
-    width: 375px; height: 2017px;
-    background-image: url(/img/backround.png);
+    width: 100%; height: 2017px;
+    background-image: url(/img/hero.png);
     background-size: cover;
-    background-repeat: no-repeat;
     background-position: 50%;
+    background-position-y: 10%;
+    background-repeat: no-repeat;
     position: relative;
+    @media (min-width:1922px) {
+        height: 2207px;
+    }
 }
 .video-title{
-    @include h2-title;
+    @include title-mob;
     color: $background-color;
+    padding-block: 24px;
+    margin: 0;
+}
+.carousel-item{
+    width: 313px !important; height: 200px !important;
+    position: absolute;
+    left: 30px;
+}
+.carousel-control-prev-icon{
+    background-image: url(/img/previous.svg) !important;
+}
+.carousel-control-next-icon{
+    background-image: url(/img/next.svg) !important;
+}
+.carousel-control-next-icon, .carousel-control-prev-icon{
+    width: 11.97px !important; height: 19.55px !important;
+}
+.carousel-control-next, .carousel-control-prev{
+    width: 32px !important; height: 200px !important;
+    opacity: 1 !important;
 }
