--- a/scss/util/_placeholders.scss
+++ b/scss/util/_placeholders.scss
@@ -1,8 +1,12 @@
 %dmSans-700{
     font-family: "DM Sans", serif;
-    font-size: 700;
+    font-weight: 700 !important;
+    font-style: normal;
+    font-optical-sizing: auto;
 }
 %dmSans-400{
     font-family: "DM Sans", serif;
-    font-size: 400;
+    font-weight: 400 !important;
+    font-style: normal;
+    font-optical-sizing: auto;
 }
