--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,8 +7,9 @@
 }
 .mobile-btn{
     position: absolute;
-    top: -7%;
-    left: 37%;
+    top: 1%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 104px;
     height: 104px;
     background-color:$btn-bg;
